Apr 18, 2005

  * ADDED: rdfs_find/5: allow for unbound property list to search all
    properties.

Apr 1, 2005

  * FIXED: memory leak creating many predicate structures on calls to
    rdf(?,+,?) if the predicate does not exist.  This is used by
    rdf_bnode/1.

Mar 29, 2005

  * FIXED: rdf:dataType --> rdf:datatype

Mar 22, 2005

  * ADDED: rdfs_assert_list/3 (adding DB argument)

Mar 8, 2005

  * FIXED: rdf_unload/1: allow for deleting non-files.

Mar 6, 2005

  * FIXED: Added code to emit XML literal values using library(sgml_write).

Mar 01, 2005

  * FIXED/ADDED: encoding issues.  Now allows writing RDF files using
    US-ASCII, ISO latin-1 or UTF-8 (default) encoding.

Feb 24, 2005

  * MODIFIED: rdf_edit.pl: broadcast missing journal instead of creating
    an XPCE dialog.  More flexible and removes XPCE dependency.

Feb 22, 2005

  * FIXED: rdf_save/[1,2] to properly quote attributes.  Anjo Anjewierden.

Feb 18, 2005

  * FIXED: rdf(X,Y,literal(lang(L,W))): not indexed query.   Djamé Seddah.

Jan 27, 2005

  * ADDED: wide-character support in label matching (rdf_match_label/3)
    and literals queries (rdf(S, P, literal(substring(foo), X))).

Nov 29, 2004

  * FIXED: lock language/type atom.    Djamé Seddah.

Oct 19, 2004

  * FIXED: Bug#194: Locking problem using read access inside a
    tranaction. Sandro Hawke.

  * ADDED: Do goal expansion on the argument of rdf_transaction/1. Sandro
    Hawke.

Oct 18, 2004 (version 2.2.0)

  * ADDED: rdf_transaction/1

Oct 13, 2004

  * FIXED: Total reorganisation of the multi-threaded access using 
    redesigned locking which allows for one writer and multiple readers.

Oct 12, 2004

  * INTERNAL: Preparing for seperate databases by combining all global
    data in a single structure.

Oct 6, 2004

  * ADDED/FIXED: Various issues in the documentation.

Sep 29, 2004

  * FIXED: Avoid continuous recomputation of `direct' (rdf) branching
    factors.

Sep 28, 2004
